derive/test/compile_fail/union.rs
use sval_derive::*;

#[derive(Value)]
pub union Union {
    a: i32,
    b: u32,
}

fn main() {

}