derive/test/compile_fail/union.stderr
error: proc-macro derive panicked
 --> compile_fail/union.rs:3:10
  |
3 | #[derive(Value)]
  |          ^^^^^
  |
  = help: message: unsupported container type
